--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,64 @@
         {% endwith %}
     </section>
 
+    <section>
+        <!-- Modal Structure -->
+        <div id="dupTitleModal" class="modal">
+            <div class="modal-content">
+                <!-- title and close button -->
+                <div class="modal-title-row row">
+                    <div class="col s11">
+                        <h5>Duplicate Quiz Title</h5>
+                    </div>
+                    <div class="col s1 modal-close-button">
+                        <a class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
+                    </div>
+                </div>
+                <!-- quiz title -->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="modalQuizTitle" name="quiz_title" type="text" minlength="5" maxlength="100" value="" required>
+                        <label for="modalQuizTitle" data-error="Invalid Quiz Title" data-dup="Quiz Title already in use.  Please choose another." data-default="Quiz Title">Quiz Title</label>
+                    </div>
+                </div>
+                <!-- save changes -->
+                <div class="row modal-action-container">
+                    <button id="modalSubmitButton" data-quizId="" class="col s12 btn-large light-blue darken-4 text-shadow">
+                        Save Changes <i class="fas fa-user-check"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div id="changeConfModal" class="modal">
+            <div class="modal-content">
+                <!-- title and close button -->
+                <div class="modal-title-row row">
+                    <div class="col s11">
+                        <h5 id="modalTitle"></h5>
+                    </div>
+                    <div class="col s1 modal-close-button">
+                        <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <h6 id="modalMessage"></h6>
+                    </div>
+                </div>
+                <!-- save changes -->
+                <div class="row modal-action-container align-right">
+                    <button id="modalYesButton" class="btn-large light-blue darken-4 text-shadow">
+                        Yes <i class="fas fa-check"></i>
+                    </button>
+                    <button id="modalNoButton" class="btn-large light-blue darken-4 text-shadow">
+                        No <i class="fas fa-times"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <main class="container">
         {% block content %}
         {% endblock %}
