Added .helper-collapsible elem to #dupTitleModal

--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,16 @@
                 </div>
                 <!-- quiz title -->
                 <div class="row">
+                    <ul id="modalQuizTitleHelperCollapsible" class="collapsible helper-collapsible col s12">
+                        <li>
+                            <div class="collapsible-header"></div>
+                            <div class="collapsible-body">
+                                <blockquote class="black-text">
+                                    Quiz titles must be 5-100 characters in length.
+                                </blockquote>
+                            </div>
+                        </li>
+                    </ul>
                     <div class="input-field col s12">
                         <input id="modalQuizTitle" name="quiz_title" type="text" minlength="5" maxlength="100" value="" required>
                         <label for="modalQuizTitle" data-error="Invalid Quiz Title" data-dup="Quiz Title already in use.  Please choose another." data-default="Quiz Title">Quiz Title</label>
