--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -25,6 +25,16 @@
                 <div class="card-content">
                     <div class="row">
                         <span class="card-title col xl12 hide-on-large-and-down">Choose a Category and Provide a Title for your Quiz</span>
+                        <ul id="quizTitleHelperCollapsibleXl" class="collapsible helper-collapsible col hide-on-large-and-down">
+                            <li>
+                                <div class="collapsible-header"></div>
+                                <div class="collapsible-body">
+                                    <blockquote class="black-text">
+                                        Quiz titles must be 5-100 characters in length.
+                                    </blockquote>
+                                </div>
+                            </li>
+                        </ul>
                         <!-- Quiz Category -->
                         <span class="card-title col s12 hide-on-extra-large-only">Choose a Category for your Quiz</span>
                         <div class="input-field col s12 xl5 select-container">
@@ -40,9 +50,21 @@
                         </div>
                         <!-- Quiz Name -->
                         <span class="card-title col s12 hide-on-extra-large-only">Provide a Title for your Quiz</span>
-                        <div class="input-field col s12 xl7">
-                            <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="100" class="validate" value="New Quiz" required>
-                            <label for="quizTitle" data-error="Invalid Quiz Title" data-dup="Quiz Title already in use.  Please choose another." data-default="Quiz Title">Quiz Title</label>
+                        <div class="col s12 xl7">
+                            <ul id="quizTitleHelperCollapsible" class="collapsible helper-collapsible hide-on-extra-large-only">
+                                <li>
+                                    <div class="collapsible-header"></div>
+                                    <div class="collapsible-body">
+                                        <blockquote class="black-text">
+                                            Quiz titles must be 5-100 characters in length.
+                                        </blockquote>
+                                    </div>
+                                </li>
+                            </ul>
+                            <div class="input-field">
+                                <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="100" class="validate" value="New Quiz" required>
+                                <label for="quizTitle" data-error="Invalid Quiz Title" data-dup="Quiz Title already in use.  Please choose another." data-default="Quiz Title">Quiz Title</label>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -65,6 +87,16 @@
                                 <div class="collapsible-body">
                                     <div class="row round-row">
                                         <span class="title col xl12 hide-on-large-and-down">Choose a Category and Provide a Title for this Round</span>
+                                        <ul id="roundTitleHelperCollapsibleXl_1" class="collapsible helper-collapsible col hide-on-large-and-down">
+                                            <li>
+                                                <div class="collapsible-header"></div>
+                                                <div class="collapsible-body">
+                                                    <blockquote class="black-text">
+                                                        Round titles must be 5-100 characters in length.
+                                                    </blockquote>
+                                                </div>
+                                            </li>
+                                        </ul>
                                         <!-- Round Category -->
                                         <span class="title col s12 hide-on-extra-large-only">Choose a Category for this Round</span>
                                         <div class="input-field col s12 xl5 select-container">
@@ -80,9 +112,21 @@
                                         </div>
                                         <!-- Round Name -->
                                         <span class="title col s12 hide-on-extra-large-only">Provide a Title for this Round</span>
-                                        <div class="input-field col s12 xl7">
-                                            <input id="roundTitle_1" name="round_title_1" type="text" minlength="5" maxlength="100" class="validate" value="Round 1" required>
-                                            <label for="roundTitle_1" data-error="Invalid Round Title" data-default="Round Title">Round Title</label>
+                                        <div class="col s12 xl7">
+                                            <ul id="roundTitleHelperCollapsible_1" class="collapsible helper-collapsible hide-on-extra-large-only">
+                                                <li>
+                                                    <div class="collapsible-header"></div>
+                                                    <div class="collapsible-body">
+                                                        <blockquote class="black-text">
+                                                            Quiz titles must be 5-100 characters in length.
+                                                        </blockquote>
+                                                    </div>
+                                                </li>
+                                            </ul>
+                                            <div class="input-field">
+                                                <input id="roundTitle_1" name="round_title_1" type="text" minlength="5" maxlength="100" class="validate" value="Round 1" required>
+                                                <label for="roundTitle_1" data-error="Invalid Round Title" data-default="Round Title">Round Title</label>
+                                            </div>
                                         </div>
                                         <span class="title col s12">Create Questions for this Round</span>
                                         <input id="questionCount_1" name="questionCount_1" type="text" class="hidden" value="1">
