--- a/templates/register.html
+++ b/templates/register.html
@@ -6,41 +6,67 @@
             <div class="card-panel">
                 <!-- email -->
                 <div class="row">
+                    <ul id="emailHelperCollapsible" class="collapsible helper-collapsible col s12">
+                        <li>
+                            <div class="collapsible-header"></div>
+                            <div class="collapsible-body">
+                                <blockquote class="black-text">
+                                    Please enter a valid email address.
+                                </blockquote>
+                            </div>
+                        </li>
+                    </ul>
                     <div class="input-field col s12">
                         <i class="fas fa-envelope prefix light-blue-text text-darken-4"></i>
                         <input id="email" name="email" type="email" class="validate" required>
-                        <label for="email">Email Address</label>
+                        <label for="email" data-error="Invalid Email Address." data-default="Email Address">Email Address</label>
                     </div>
                 </div>
                 <!-- username -->
                 <div class="row">
+                    <ul id="uIdHelperCollapsible" class="collapsible helper-collapsible col s12">
+                        <li>
+                            <div class="collapsible-header"></div>
+                            <div class="collapsible-body">
+                                <blockquote class="black-text">
+                                    A valid Username is 5-15 characters in length, consisting of numbers, lower/upper case letters.
+                                </blockquote>
+                            </div>
+                        </li>
+                    </ul>
                     <div class="input-field col s12">
                         <i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
                         <input id="user_id" name="user_id" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="user_id">Username</label>
+                        <label for="user_id" data-error="Invalid Username." data-default="Username">Username</label>
                     </div>
                 </div>
                 <!-- password -->
-                <div class="row">
-                    <div class="input-field col s12">
+                <div class="row password-container">
+                    <ul id="pwdHelperCollapsible" class="collapsible helper-collapsible col s12">
+                        <li>
+                            <div class="collapsible-header"></div>
+                            <div class="collapsible-body">
+                                <blockquote class="black-text">
+                                    A valid password is 5-15 characters in length, consisting of numbers, lower/upper case letters.
+                                </blockquote>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="input-field password col s12">
                         <i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
                         <input id="pwd" name="pwd" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="pwd">Password</label>
-                        <span class="helper-text" data-error="Invalid Password."></span>
+                        <label for="pwd" data-error="Invalid Password." data-default="Password">Password</label>
                     </div>
-                </div>
-                 <!-- password confirmation -->
-                <div class="row">
-                    <div class="input-field col s12">
+                    <!-- password confirmation -->
+                    <div class="input-field compare-password col s12">
                         <i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
                         <input id="cPwd" name="cPwd" type="password" required>
-                        <label for="cPwd">Password Confirmation</label>
-                        <span id="cPwdHlp" class="helper-text" data-error=""></span>
+                        <label for="cPwd" data-error="" data-default="Password Confirmation">Password Confirmation</label>
                     </div>
                 </div>
                 <!-- register -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow" onsubmit="return regValidate(pWordValidation('pwd', 'cPwd'));">
+                    <button id="registerSubmitButton" type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
                         Register <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
