Altered doc ready func Added data-quizId attr value to #modalSubmitButton

--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -133,6 +133,7 @@
     <script>
         $(function() {
           loadImg({{ viewQuiz.rounds | tojson }});
+          $('#modalSubmitButton').attr('data-quizId', '{{ viewQuiz._id }}');
         });
     </script>
 {% endblock %}
