Renamed #viewQuiz to #quizSheet

--- a/templates/quiz_sheet.html
+++ b/templates/quiz_sheet.html
@@ -11,7 +11,7 @@
     <title>Pimp My Quiz!</title>
 </head>
 <body>
-    <main id="viewQuiz" class="container">
+    <main id="quizSheet" class="container">
         <h3 class="light-blue-text text-darken-4 center-align">{{ viewQuiz.title }}</h3>
         <h5 class="light-blue-text text-darken-4 center-align">By: {{ viewQuiz.author }}</h5>
         <h5 class="light-blue-text text-darken-4 center-align">Category: <i class="fas {{ viewQuiz.category_icon.class }} fa-fw"></i> {{ viewQuiz.category }}</h5>
