--- a/templates/base.html
+++ b/templates/base.html
@@ -139,6 +139,31 @@
                 </div>
             </div>
         </div>
+
+         <div id="formValidationModal" class="modal">
+            <div class="modal-content">
+                <!-- title and close button -->
+                <div class="modal-title-row row">
+                    <div class="col s11">
+                        <h5>Validation Errors</h5>
+                    </div>
+                    <div class="col s1 modal-close-button">
+                        <a class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <h6>Your Quiz has validation errors.<p>Valid questions and rounds have been collapsed.</p><p>Please review any open items highlighted in red.</p></h6>
+                    </div>
+                </div>
+                <!-- ok button -->
+                <div class="row modal-action-container align-right">
+                    <button class="modal-action modal-close col s12 btn-large light-blue darken-4 text-shadow">
+                        Ok <i class="fas fa-check"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
     </section>
 
     <main class="container">
